# cpppaxos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  acceptor.cpp  acceptor.h  client.h  eztimer.h  learner.cpp  learner.h  localmessenger.cpp  localmessenger.h  main.cpp  messenger.h  node.cpp  node.h  paxosnode.cpp  paxosnode.h  proposalid.cpp  proposalid.h  proposer.cpp  proposer.h  reset.sh  server.cpp  server.h
essential/: accepter.cpp  acceptor.cpp  acceptor.h  learner.cpp  learner.h  messenger.h  proposal_id.cpp  proposal_id.h  proposer.cpp  proposer.h
paxos/: acceptor.cpp  acceptor.h  learner.cpp  learner.h  messenger.h  node.cpp  node.h  paxos.cpp  paxos.h  paxos_node.cpp  paxos_node.h  paxosnode.cpp  paxosnode.h  peer.h  proposalid.cpp  proposalid.h  proposer.cpp  proposer.h  proto.h
practical/: practical_acceptor.h  practical_messenger.h  practical_proposer.h
proto/: common_proto_parser.cpp  common_proto_parser.h  message.h  message_factory.cpp  message_factory.h  proto.h  test_message.cpp  test_message.h
